tests/parsing/smtlib/v2.6/errors/024_var_binding_bad_term_1.expected
File "", line 1, character 33-34:
Error (024) while parsing a variable binding, read the reserved word '_',
      but expected a term.

